# cpp_scratchpad

./: .gitmodules  README.md
SimpleCalc/: CMakeLists.txt  main.cpp
SimpleCalc/Google_tests/: CMakeLists.txt  SimpleCalcTest.cpp
SimpleCalc/SimpleCalc_lib/: CMakeLists.txt  SimpleCalc.cpp  SimpleCalc.h
